<?xml version="1.0"?>
<package>
  <name>uos_rotunit</name>
  <version>0.0.0</version>
  <description>A driver for the uos-rotunit.</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/uos_rotunit</url>
  <url type="repository">https://github.com/uos/uos_rotunit</url>
  <url type="bugtracker">https://github.com/uos/uos_rotunit/issues</url>

  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="git@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <author email="mguenthe@uos.de">Martin Günther</author>

  <run_depend>uos_rotunit_driver</run_depend>
  <run_depend>uos_rotunit_snapshotter</run_depend>
  <run_depend>uos_rotunit_teleop</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
