<?xml version="1.0"?>
<package>
  <name>uos_rotunit_teleop</name>
  <version>1.0.0</version>
  <description>sends command to handle the rotunit speed and to start the snapshotter</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>uos_rotunit_driver</build_depend>
  <build_depend>uos_rotunit_snapshotter</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sound_play</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>uos_rotunit_driver</run_depend>
  <run_depend>uos_rotunit_snapshotter</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sound_play</run_depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugin.xml"/>
  </export>

</package>
